# sec-edge-scraper

./: .gitignore  .~lock.csvfile1.csv#  covenants_types.json  csvfile.csv  extractor.py  filter.py  grab.py  matcher.py  move.py  new_results.json  old_desc.csv  old_desc_bak.csv  old_results.json  old_scraper.py  pyproject.toml  rename.py  resp.json  results.json  scraper.py  test_rename.py  utils.py  work.json
resources/: CIK_DATE_EDGAR_Data_Collection.xls
