[tool.poetry]
name = "sec-edge-scraper"
version = "0.1.0"
description = ""
authors = ["Rafay Ghafoor <rafayghafoor@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
alive-progress = "^1.6.2"
trio = "^0.18.0"
asks = "^2.4.12"
flashtext = "^2.7"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
